--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 .attr("y", margin.left-175) // Adjust the vertical position here (offset from the left)
                 .attr("transform", "rotate(-90)")
                 .style("text-anchor", "middle")
-                .text("Mean Value")
+                .text("Mean Value (€)")
                 .style('font-size', '20px')
                 .style('font-weight', 'bold');
 
